backend/vulnerability_analysis/testing/npr1/full/klee-out-0/messages.txt
KLEE: Using STP solver backend
KLEE: SAT solver: MiniSat
KLEE: Deterministic allocator: Using quarantine queue size 8
KLEE: Deterministic allocator: globals (start-address=0x7fc8a7400000 size=10 GiB)
KLEE: Deterministic allocator: constants (start-address=0x7fc627400000 size=10 GiB)
KLEE: Deterministic allocator: heap (start-address=0x7ec627400000 size=1024 GiB)
KLEE: Deterministic allocator: stack (start-address=0x7ea627400000 size=128 GiB)
KLEE: ERROR: libc/string/strlen.c:22: memory error: out of bound pointer
KLEE: NOTE: now ignoring this error at this location
